--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
     background-color: black;
     color: white;
     border: 1px solid red;
+    height: 100vh;
 }
 ul {
   list-style-type: none;
@@ -35,15 +36,22 @@ li a:hover:not(.active) {
 .active {
   background-color: blue;
 }
+.midsection {
+    border: 1px solid white;
+    margin: 5px 5px 5px 5px;
+    height: auto;
+    width: auto;
+    /* display: grid; */
+}
 .information {
     border: 1px solid white;
     margin: 5px 5px 5px 5px;
     height: auto;
-    width: auto%;
-    display: grid;
-    
+    width: auto;
+    /* display: grid;    */
 }
 img {
    object-fit: fill;
-   border: 1px solid red;
+   border: 1px solid green;
+   
 }
