--- a/page2.css
+++ b/page2.css
@@ -34,3 +34,16 @@ li a:hover:not(.active) {
 .active {
   background-color: blue;
 }
+table {
+  border: 1px solid blue;
+  display: flex;
+  height: 500px;
+  width: 300px;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  margin: 5px 5px 5px 5px;
+}
+td {
+  border: 1px solid rebeccapurple;
+}
