--- a/index.css
+++ b/index.css
@@ -32,26 +32,48 @@ li a {
 li a:hover:not(.active) {
   background-color: blue;
 }
-
 .active {
   background-color: blue;
 }
 .midsection {
     border: 1px solid white;
     margin: 5px 5px 5px 5px;
-    height: auto;
+    height: 100vh;
     width: auto;
     /* display: grid; */
 }
-.information {
-    border: 1px solid white;
+/* .information {
+    border: 1px solid blue;
     margin: 5px 5px 5px 5px;
     height: auto;
     width: auto;
+    position: absolute;
+  left: 150px;
+  top: 200px;
+    display: grid;   
+} */
+ #tagLine {
+    border: 1px solid blue;
+    margin: 5px 5px 5px 5px;
+    height: auto;
+    width: auto;
+    position: absolute;
+  left: 150px;
+  top: 200px;
     /* display: grid;    */
 }
 img {
-   object-fit: fill;
+  position: relative;
+  left: 600px;
    border: 1px solid green;
    
+}
+#aboutSection {
+  border: 1px solid green;
+  margin: 2px 2px 2px 2px;
+  width: 60%;
+  height: 500px;
+  position: absolute;
+  left: 300px;
+  top: 500px;
 }
