--- a/page1.css
+++ b/page1.css
@@ -54,11 +54,15 @@ form {
   color: orange;
 } 
 table {
-  border: 2px solid blue;
+  margin: 5px 5px 5px 5px;
+  border: 5px solid blue;
   /* height: 100vh; */
+  width: 100%;
 }
 td {
   border: 1px solid ;
+  height: 20px;
+  width: 20px;
 }
 .regestration {
   border: 1px solid red;
