--- a/page2.css
+++ b/page2.css
@@ -35,15 +35,32 @@ li a:hover:not(.active) {
   background-color: blue;
 }
 table {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   display: flex;
+  justify-content: center;
+  position: absolute;
   height: 500px;
   width: 300px;
   flex-direction: column;
   align-items: center;
   align-content: center;
   margin: 5px 5px 5px 5px;
+  top: 300px;
 }
 td {
-  border: 1px solid rebeccapurple;
+  /* border: 1px solid rebeccapurple; */
+  display: flex;
+  justify-content: center;
+}
+.pic {
+  height: 100px;
+  position: relative;
+  left: 5px;
+  top: 50px;
+}
+.tcontainer {
+  /* border: 2px solid red; */
+  height: 100vh;
+  display: flex;
+  justify-content: center;
 }
